syntax = "proto3";
package evmos.claim.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/v1beta1/coin.proto";
import "evmos/claim/v1/claim.proto";
import "evmos/claim/v1/genesis.proto";

option go_package = "github.com/tharsis/evmos/x/claim/types";

// Query defines the gRPC querier service.
service Query {
  // TotalUnclaimed queries the total unclaimed tokens from the airdrop
  rpc TotalUnclaimed(QueryTotalUnclaimedRequest)
      returns (QueryTotalUnclaimedResponse) {
    option (google.api.http).get =
        "/evmos/claim/v1/total_unclaimed";
  }
  // Params returns the claim module parameters
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/evmos/claim/v1/params";
  }
  // ClaimRecords returns the claims records for a given address
  rpc ClaimRecords(QueryClaimRecordsRequest) returns (QueryClaimRecordsResponse) {
    option (google.api.http).get =
        "/evmos/claim/v1/claim_records/{address}";
  }
}

// QueryTotalUnclaimedRequest is the request type for the Query/TotalUnclaimed RPC method.
message QueryTotalUnclaimedRequest {}

// QueryTotalUnclaimedResponse is the response type for the Query/TotalUnclaimed RPC method.
message QueryTotalUnclaimedResponse {
  // coins define the unclaimed coins
  repeated cosmos.base.v1beta1.Coin coins = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params defines the parameters of the module.
  Params params = 1 [ (gogoproto.nullable) = false ];
}

// QueryClaimRecordsRequest is the request type for the Query/ClaimRecords RPC method.
message QueryClaimRecordsRequest {
  string address = 1;
}

// QueryClaimRecordsResponse is the response type for the Query/ClaimRecords RPC method.
message QueryClaimRecordsResponse {
  // total initial claimable amount for the user
  string initial_claimable_amount = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  repeated Claim claims = 2 [(gogoproto.nullable) = false];
}
